# BallisticSystem

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  exportCSV.jl  flight_data.json  log_127_17-Apr-2025_02-27-18_gps_data_t.csv  random_processes.jl  test_sum_function.jl  test_sum_simple.jl  test_sum_standalone.jl
cpp_src/: System.cpp  System.h  code.jl  main-actual.cpp  main.cpp
flight_data_export/: flight_data_guidance_data_t.csv  flight_data_imu_data_t.csv  flight_data_system_data_t.csv
include/: CMakeCache.txt  KalmanFilter.h
julia/: GaussianTest.jl  Main.jl  Measurement.jl  SystemEstimator.jl  UncertaintyPropagation.jl  test.jl
src/: BFGS.Jl  Gaussian.jl  KalmanFilter.cpp  StateEstimator.cpp  StateEstimator.h  ballistic_plot.cpp  camera.jl  gaussian.jl  measurement.jl  random_process_example.jl  rk4_noise_comparison.jl  rotations.jl  run_ballistic_estimation.jl  run_estimation.jl  run_sqrt_estimation.jl  run_visual_navigation.jl  sqrt_ballistic_estimation_main.jl  system_estimator.jl  test.jl  test_measurement_update_bfgs.jl  visualisation.jl
src/tests/: test_gaussian.jl  test_system_estimator.jl
tests/: test_gaussian.jl  test_system_estimator.jl
